Reimplement the extension annotation processor
The idea is the following:
- we collect the config properties and dump them into a file that is
  local to the module - this will help with Develocity caching and a
  lot of other issues.
- ideally the descriptor will be also consumable by IDEs
- when generating the documentation, we will gather all the descriptors
  in the tree and transform them to Asciidoc files.

For now, we keep the old way of doing things around for compatibility.